tests/regression/200_COMPILER_FEATURES/220_FLOW_CHECKER/220_005_reject_void_redundant_terminator/expected.txt
error[KORU010]: continuation without branch handler — '|>' at line start is not allowed; '|>' is inline glue only
  --> tests/regression/200_COMPILER_FEATURES/220_FLOW_CHECKER/220_005_reject_void_redundant_terminator/input.kz:17:0
    |
 17 | |> _
    | ^

